--- a/client/src/components/mainMenu/MainMenu.css
+++ b/client/src/components/mainMenu/MainMenu.css
@@ -28,6 +28,10 @@
   max-height: 2.5rem;
   min-width: 30vw;
   max-width: 30vw;
+
+  white-space: nowrap;
+  overflow: hidden;
+  resize: none;
 }
 
 .home-code-input:focus::placeholder {
@@ -37,6 +41,9 @@
 .home-button {
   min-width: 30vw;
   max-width: 30vw;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .hexagon-container {
@@ -83,5 +90,17 @@
   }
   100% {
     transform: rotate(calc(var(--initial-rotation) + var(--rotation-speed)));
+  }
+}
+
+@media (max-width: 480px) {
+  .home-code-input {
+    min-width: 70vw;
+    max-width: 70vw;
+  }
+
+  .home-button {
+    min-width: 70vw;
+    max-width: 70vw;
   }
 }
